--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
 asgiref==3.7.2
-Django==4.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+defusedxml==0.7.1
+dj-rest-auth==5.1.0
+Django==4.0.1
+django-allauth==0.61.1
+django-cors-headers==4.3.1
+django-environ==0.11.2
+django-rest-knox==4.2.0
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.3.1
+djongo==1.3.6
+dnspython==2.6.1
+gunicorn==21.2.0
+idna==3.6
+oauthlib==3.2.2
+packaging==24.0
 pillow==10.2.0
+pycparser==2.21
+PyJWT==2.8.0
+pymongo==3.12.3
+python3-openid==3.2.0
 pytz==2024.1
-sqlparse==0.4.4
+requests==2.31.0
+requests-oauthlib==2.0.0
+sqlparse==0.2.4
 typing_extensions==4.10.0
+urllib3==2.2.1
+whitenoise==6.6.0
